can log in w google in a way that is more compatible w the app format

--- a/public/style.css
+++ b/public/style.css
@@ -105,14 +105,14 @@ h3 {
   padding: 20px;
 }
 
-/* #notLoggedInDiv {
+#notLoggedInDiv {
   visibility: visible;
 }
 
 #loggedInDiv {
   display: none;
   visibility: hidden;
-} */
+}
 
 /* Style buttons */
 .download {
