--- a/public/style.css
+++ b/public/style.css
@@ -29,9 +29,9 @@ h3 {
 .gameContainer {
   display: flex;
   padding: 0.5em;
-  gap: 0.1em;
+  gap: 1em;
   min-height: 0;
-  align-content: center;
+  justify-content: center;
 }
 
 .infoContainer {
@@ -42,18 +42,22 @@ h3 {
   background-color: #FDDDE6;
   border: 0em dotted #ccc;
   border-radius: 25px;
-  flex: 1;
   overflow-y: auto;
   height: 100%;
+  justify-content: right;
+  max-width: 40vw;
+
 }
 
 /************************ RIGHT PANEL ************************/
 .rightHalf {
   border-radius: 25px;
   position: relative;
-  flex: 3;
   display: flex;
   flex-direction: column;
+  justify-content: left;
+  gap: 0.5em;
+  width: fit-content;
 }
 
 /********** Bunny Display ************/
@@ -61,6 +65,7 @@ h3 {
   display: flex;
   position: relative;
   height: 80%;
+  max-width: 500px;
 }
 
 #bunnyContainer0 div {
@@ -75,35 +80,49 @@ h3 {
   position: absolute;
   top: 0;
   left: 0;
+  width: fit-content;
+  border-radius: 25px;
 }
 
 #bunnyImg {
   position: absolute;
   top: 0;
   left: 0;
+  width: fit-content;
 }
 
 #outfitImg {
   position: absolute;
   top: 0;
   left: 0;
+  width: fit-content;
 }
 
 #extraImg {
   position: absolute;
   top: 0;
   left: 0;
+  width: fit-content;
 }
 
-/********** Load Display ************/
-#saveContainer {
+canvas {
+  visibility: hidden;
+  display: none;
+}
+
+/********** UNDER BUNNY IMG SECTION ************/
+#saveContainer { 
   background-color: #FDDDE6;
   border-radius: 25px;
-  padding: 20px;
-  width: fit-content;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  max-width: 480px;
+  width: 100%;
   align-self: center;
 }
 
+/* Logged In */
 #loggedInDiv {
   display: none;
   visibility: hidden;
@@ -129,6 +148,14 @@ h3 {
   background-color: white;
 }
 
+/* Logged Out */
+#notLoggedInDiv {
+  visibility: visible;
+  display: flex;
+  flex-direction: row;
+}
+
+/* Delete */
 .deleteBunnyBttn:hover {
   color: pink;
 }
@@ -150,12 +177,7 @@ h3 {
   visibility: hidden;
 }
 
-#notLoggedInDiv {
-  visibility: visible;
-  display: flex;
-  flex-direction: row;
-}
-
+/* Download */
 #downloadBttn {
   font-size: 1em;
   width: 100%;
@@ -167,11 +189,6 @@ h3 {
 
 #downloadBttn:hover {
   color: pink;
-}
-
-canvas {
-  visibility: hidden;
-  display: none;
 }
 
 /************************ LEFT PANEL ************************/
